--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
   <div class="banner">
     <img class="img-flex" src="images/andromeda.jpg" alt="">
-    <div class="banner-content">
-      <div>
-        <h1 class="yotta">Space & Time Explorer Person</h1>
-        <p class="tera push-0">Space & Time Explorer Person, who has a name that nobody knows (except his Wife), travels the time vortex solving problems, meeting different alien species and generally being meddlesome.</p>
+    <div class="banner-content text-center">
+      <div class="wrapper">
+        <h1 class="push-1-4 yotta">Space & Time Explorer Person</h1>
+        <p class="tera push-1-4">Space & Time Explorer Person, who has a name that nobody knows (except his Wife), travels the time vortex solving problems, meeting different alien species and generally being meddlesome.</p>
       </div>
     </div>
   </div>
