--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <div class="banner">
     <img class="img-flex" src="images/andromeda.jpg" alt="">
     <div class="banner-content text-center">
-      <div class="wrapper">
+      <div class="max-length gutter-1-4">
         <h1 class="push-1-4 yotta">Space & Time Explorer Person</h1>
-        <p class="tera push-1-4">Space & Time Explorer Person, who has a name that nobody knows (except his Wife), travels the time vortex solving problems, meeting different alien species and generally being meddlesome.</p>
+        <p class="tera push-1">Space & Time Explorer Person, who has a name that nobody knows (except his Wife), travels the time vortex solving problems, meeting different alien species and generally being meddlesome.</p>
       </div>
     </div>
   </div>
